# src/requestHandler.ts
@@ -812,6 +812,7 @@ export default class RequestHandler {
 
     try {
       await this.operations.moveVaultFile(path, newPath, allowOverwrite);
+      res.set("Content-Location", encodeURI(newPath));
       this.returnCannedResponse(res, { statusCode: 204 });
     } catch (error) {
       if (error instanceof FileNotFoundError) {
